--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+/* Home screen CSS */
+
+/* The big thing at the top */
+
 #Home {
 	padding-top: 10px;
 }
@@ -105,4 +109,91 @@
 .minmax.max {
 	color: rgb(243, 126, 0) !important;
 	text-align: left !important;
+}
+
+
+/* More information thingy */
+
+.more-info > ul {
+	text-align: center;
+	list-style: none;
+}
+
+.more-info > ul > li {
+	display: inline-block;
+
+	font-size: 18px;
+	line-height: 18px;
+	text-align: center;
+}
+
+.more-info > ul > li > i {
+	color: rgb(78, 78, 78);
+}
+
+.more-info > ul > li > span {
+	color: rgb(88, 88, 88);
+}
+
+
+/* Bottom forecast stuff */
+
+footer.forecast-container {
+	display: box;
+	display: -webkit-box;
+	display: -moz-box;
+
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+
+	-webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+	box-sizing: horizontal;
+
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+footer.forecast-container > ul {
+	display: box;
+	display: -webkit-box;
+	display: -moz-box;
+
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+
+	-webkit-box-orient: horizontal;
+	-moz-box-orient: horizontal;
+	box-sizing: horizontal;
+
+	width: 100%;
+	height: 118px;
+
+	list-style: none;
+	overflow-x: auto;
+	overflow-y: hidden;
+}
+
+.forecast {
+	width: 70px;
+	text-align: center;
+}
+
+.forecast > .date {
+	font-size: 14px;
+	color: rgb(88, 88, 88);
+	line-height: 14px;
+}
+
+.forecast > img {
+	max-width: 65px;
+}
+
+.forecast > .minmax {
+	font-size: 14px;
+	line-height: 14px;
+	text-align: center !important;
 }
