--- a/css/home.css
+++ b/css/home.css
@@ -55,15 +55,24 @@
 }
 
 #big-container > .temp-container > .location {
-	margin-bottom: 5px;
+	margin-bottom: -2px;
 
 	text-align: center;
 	font-size: 16px;
 	color: rgb(88, 88, 88);
 }
 
+#big-container > .temp-container > .description {
+	margin-bottom: -1px;
+
+	text-align: center;
+	text-transform: capitalize;
+	font-size: 14px;
+	color: rgb(88, 88, 88);
+}
+
 #big-container > .temp-container > .temp {
-	margin-bottom: -10px;
+	margin-bottom: -15px;
 
 	text-align: center;
 	font-size: 40px;
@@ -109,6 +118,10 @@
 
 
 /* More information thingy */
+
+.more-info {
+	margin: 0 -10px;
+}
 
 .more-info > ul {
 	text-align: center;
