--- a/css/building-blocks-old.css
+++ b/css/building-blocks-old.css
@@ -1,3 +1,5 @@
+/* Stuff needed for Building Blocks, but isn't included for some reason */
+
 #index {
 	height: 100%;
 }
@@ -14,8 +16,10 @@
 }
 section[role="region"][data-position="right"] {
 	position: absolute;
+	display: none;
 }
 [data-position="right"].current {
+	display: block !important;
 	animation: rightToCurrent 0.4s forwards;
 	-webkit-animation: rightToCurrent 0.4s forwards;
 }
@@ -98,7 +102,7 @@ section[role="region"]:not(#drawer) {
 	z-index: 0;
 	padding-left: 0;
 }
-/*section[role="region"]:not(#drawer) > header:first-child {
+section[role="region"]:not(#drawer) > header:first-child {
 	margin-left: 0;
 }
 section[role="region"]:not(#drawer) > header:first-child h1 {
@@ -111,18 +115,18 @@ section[role="region"]:not(#drawer) > header:first-child > a {
 	width: 5rem;
 }
 section[role="region"]#drawer > header:first-child > a .icon {
-	width: 3.5rem;*/
+	width: 3.5rem;
 }
 section[data-type="sidebar"] + section[role="region"] > header:first-child > button, 
 section[data-type="sidebar"] + section[role="region"] > header:first-child > a {
 	background-position: 3.5rem center;
 }
-	 /* section[role="region"]:not(#drawer) > header:first-child > a .icon:after {
+section[role="region"]:not(#drawer) > header:first-child > a .icon:after {
 	width: 2rem;
 }
 section[role="region"]#drawer > header:first-child > a .icon:after {
 	width: 3.5rem;
-}*/
+}
 
 /* Switches */
 #switches label:last-child {
